fix bugs css + detect dark mode

--- a/src/components/Directs/Profile/css.css
+++ b/src/components/Directs/Profile/css.css
@@ -40,6 +40,7 @@
     background-color: rgba(0, 0, 0, 0.5);
     flex-wrap: wrap;
     align-content: center;
+    align-items: center;
     justify-content: center;
 }
 
