--- a/src/components/Directs/Stat/css.css
+++ b/src/components/Directs/Stat/css.css
@@ -13,7 +13,7 @@
 }
 
 .dark .title-stat{
-    filter: invert();
+    color: #70030c;
 }
 
 .stat, .stat-input{
